Exploring how to get source position from Graal nodes
Added test and required configuration changes, as well as some non-required
configuration changes for accessing the useless "creationStackTrace"
property.